# polkit-pkla-compat

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
docs/: Makefile.am  pkla-admin-identities.xml  pkla-check-authorization.xml  pklocalauthority.xml
docs/man/: Makefile.am  pklocalauthority.xml
po/: LINGUAS  Makevars  POTFILES.in  da.po
polkit/: polkit.h
src/: Makefile.am  polkitbackendconfigsource.c  polkitbackendlocalauthorizationstore.c
src/polkitbackend/: 50-pkla.rules.in  Makefile.am  pkla-admin-identities.c  pkla-check-authorization.c  polkitbackend.h  polkitbackendauthority.c  polkitbackendauthority.h  polkitbackendconfigsource.h  polkitbackendlocalauthority.c  polkitbackendlocalauthorizationstore.c  polkitbackendlocalauthorizationstore.h  polkitbackendtypes.h
test/: Makefile.am  polkitbackendlocalauthoritytest.c  polkitbackendlocalauthorizationstoretest.c
test/data/etc/polkit-1/localauthority/10-test/: com.example.pkla
test/mocklibc/: Makefile.am  configure.ac
test/mocklibc/src/: netgroup-debug.c  netgroup.c
test/polkitbackend/: Makefile.am  polkitbackendlocalauthoritytest.c  polkitbackendlocalauthorizationstoretest.c
