## Process this file with automake to produce Makefile.in

## Settings
# The overrides below are quite intentional
AUTOMAKE_OPTIONS = -Wno-override

## Targets
SUBDIRS = mocklibc

## Rules
# Never install anything in this dir (specifically MockLibc)
install:; @:
install-exec:; @:
install-data:; @:
uninstall:; @:

